# bodo_connect

./: .dockerignore  .gitignore  CROSS-COMPILE.md  Cargo.toml  Dockerfile.android  Dockerfile.empty  Dockerfile.rpi4  README.md  compile_on_android.patch  networkmap.example.md
.cargo/: config.toml
.github/workflows/: docker-image.yml  main.yml
src/: bodo_connect.rs  host.rs  ip.rs  lib.rs  logger.rs  main.rs  networkmap.rs  parse.rs  subnet.rs  waker.rs
src/cmd/: mod.rs  runtime_error.rs  sshfs.rs
src/config/: mod.rs
src/logger/: dummy.rs  mod.rs
src/net/: host.rs  mod.rs  networkmap.rs  networkmap_prelude.rs  subnet.rs
src/net/external_ip/: mod.rs
src/net/networkmap/: mod.rs  parsing.rs
src/ssh/: hop.rs  mod.rs  options_internal.rs  process.rs  ssh_options.rs
src/waker/: mod.rs
tests/: parsing.rs  tests.rs
