[package]
name = "bodo_connect"
version = "0.6.4"
edition = "2021"
description = "A library for mapping/connecting to your hosts in the whole world wide web."
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/topongo/bodo_connect"
authors = [ "Lorenzo Bodini" ]

[dependencies]
subprocess = "0.2.9"
tokio = "1.27.0"
reachable = "0.2.2"
external-ip = "4.2.0"
futures = "0.3.27"
log = { version = "0.4.17", optional = true }
chrono = { version = "0.4.24" }
colored = { version = "2.0.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }
serde = { version = "1.0.159", features = ["derive"], optional = true }
serde_json = { version = "1.0.95", optional = true }
home = { version = "0.5.4", optional = true }
mac_address = { version = "1.1.3", optional = true }
reqwest = { version = "0.11.16", optional = true }
clap = { version = "4.2.1", features = ["derive"], optional = true }

[patch.crates-io]
mac_address = { git = 'https://github.com/topongo/mac_address' }

[features]
default = ["wake", "cmd", "serde", "log", "rsync", "sshfs"]
wake = ["dep:mac_address", "dep:reqwest"]
cmd = ["dep:clap", "dep:home", "serde"]
serde = ["dep:serde", "dep:serde_json"]
log = ["dep:log", "dep:lazy_static", "dep:colored"]
rsync = ["cmd"]
sshfs = ["cmd"]

[[bin]]
name = "bodoConnect"
required-features = ["cmd", "serde"]
path = "src/bin/main.rs"
